<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HeadHunter</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Ф.И.О.</string>
    <string name="date_message">Дата рождения</string>
    <string name="gender_query">Пол:</string>
    <string name="data_string">ДД/ММ/ГГГГ</string>
    <string name="edit_post">Должность</string>
    <string name="edit_phone">Номер телефона</string>
    <string name="edit_salary">Заработная плата</string>
    <string name="edit_mail">Почтовый адрес</string>
    <string name="button_send">Отправить резюме</string>
    <string name="name_hint">Имя:</string>
    <string name="gender_hint">Пол:</string>
    <string name="date_hint">Дата:</string>
    <string name="post_hint">Должность:</string>
    <string name="mail_hint">Почта:</string>
    <string name="salary_hint">Зарплата:</string>
    <string name="phone_hint">Номер телефона:</string>
    <string name="response_hint">Ответ работодателя:</string>
    <string name="send_button">Отправить ответ</string>
    <color name="black">#FFFFFF</color>
    <string-array name="gender_array">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

</resources>
