<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="textPersonName|textCapWords"
        android:maxLength="50"
        android:hint="@string/edit_message"
        android:background="@drawable/cbutton_2">
        
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_name"
        android:layout_below="@+id/edit_name"
        android:background="@drawable/cbutton_1"
        android:layout_marginTop="14dp"
        android:text="@string/date_message"
        android:textAppearance="?android:attr/textAppearanceSmall"
         />


	<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="7dp"
        android:text="@string/gender_query"
        android:textColor="@android:color/white" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:entries="@array/gender_array"
        android:background="@drawable/cbutton_2" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/edit_name"
        android:text="@string/data_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/cbutton_1" />

    <EditText
        android:id="@+id/edit_post"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_below="@+id/spinner1"
        android:maxLength="50"
        android:layout_marginTop="10dp"
        android:inputType="textCapSentences"
        android:hint="@string/edit_post"
        android:background="@drawable/cbutton_2" >

        
    </EditText>

    <EditText
        android:id="@+id/edit_salary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_post"
        android:layout_below="@+id/edit_post"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:hint="@string/edit_salary"
        android:background="@drawable/cbutton_2" >
        
   </EditText>

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_salary"
        android:layout_below="@+id/edit_salary"
        android:layout_marginTop="10dp"
        android:inputType="phone"
        android:digits="1234567890+"
        android:hint="@string/edit_phone"
        android:background="@drawable/cbutton_2" >
   </EditText>

    <EditText
        android:id="@+id/edit_mail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_phone"
        android:layout_below="@+id/edit_phone"
        android:layout_marginTop="10dp"
        android:background="@drawable/cbutton_2"
        android:inputType="textEmailAddress"
        android:hint="@string/edit_mail" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_mail"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_send"
        android:background="@drawable/cbutton_1"
        android:textAppearance="?android:attr/textAppearanceSmall" />



</RelativeLayout>
